spliting datasets download for MyBinder

--- a/get-running-8-tev-code-python.ipynb
+++ b/get-running-8-tev-code-python.ipynb
@@ -56,7 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sam Jul 13 00:35:58 CEST 2019\n",
+      "Tue Jul 23 22:03:05 UTC 2019\n",
       "\n"
      ]
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -93,7 +93,7 @@
        "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -121,8 +121,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 4.0K\n",
-      "drwxr-xr-x 2 summerstudent users 4.0K Jul 13 00:36 python-8tev\n",
+      "total 108K\n",
+      "-rw-r--r-- 1 main main  125 Jul 23 21:46 README.md\n",
+      "-rw-r--r-- 1 main main 9.6K Jul 23 21:46 get-running-8-tev-code-cpp.ipynb\n",
+      "-rw-r--r-- 1 main main 8.0K Jul 23 21:46 get-running-13-tev-python-code.ipynb\n",
+      "-rw-r--r-- 1 main main  64K Jul 23 21:46 get-running-13-tev-cpp-code.ipynb\n",
+      "drwxr-xr-x 2 main main 4.0K Jul 23 21:46 images\n",
+      "-rw-r--r-- 1 main main  12K Jul 23 22:02 get-running-8-tev-code-python.ipynb\n",
+      "drwxr-xr-x 2 main main 4.0K Jul 23 22:03 python-8tev\n",
       "\n"
      ]
     }
@@ -141,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -150,7 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/student/demos-framework-software-notebooks/python-8tev\n",
+      "/home/main/notebooks/demos-framework-software-notebooks\n",
       "\n"
      ]
     }
@@ -176,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -194,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -203,7 +209,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/student/demos-framework-software-notebooks/python-8tev/python-8tev\n",
+      "/home/main/notebooks/demos-framework-software-notebooks/python-8tev\n",
       "\n"
      ]
     }
@@ -222,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -231,7 +237,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sam Jul 13 00:37:08 CEST 2019\n",
+      "Tue Jul 23 22:03:07 UTC 2019\n",
       "\n"
      ]
     }
@@ -250,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -261,7 +267,7 @@
        "0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -305,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -314,7 +320,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/student/demos-framework-software-notebooks/python-8tev/python-8tev/atlas-outreach-data-tools-framework/Input\n",
+      "/home/main/notebooks/demos-framework-software-notebooks/python-8tev/atlas-outreach-data-tools-framework/Input\n",
       "\n"
      ]
     }
@@ -333,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -343,7 +349,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sam Jul 13 00:37:17 CEST 2019\n",
+      "Tue Jul 23 22:03:12 UTC 2019\n",
       "\n"
      ]
     }
@@ -364,6 +370,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "command31 = 'wget -c http://opendata.atlas.cern/release/samples/Data.zip'\n",
+    "os.system(command31)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Print current system time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tue Jul 23 22:04:41 UTC 2019\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "myCmd = os.popen('date').read()\n",
+    "print(myCmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Unzip the dataset you download"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "command4 = 'unzip Data.zip'\n",
+    "os.system(command4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Remove the zip file"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {
     "collapsed": false
@@ -372,7 +466,7 @@
     {
      "data": {
       "text/plain": [
-       "768"
+       "0"
       ]
      },
      "execution_count": 17,
@@ -381,8 +475,8 @@
     }
    ],
    "source": [
-    "command3 = 'wget http://opendata.atlas.cern/release/samples/complete_set_of_ATLAS_open_data_samples_July_2016.zip'\n",
-    "os.system(command3)"
+    "command5 = 'rm -rf Data.zip'\n",
+    "os.system(command5)"
    ]
   },
   {
@@ -403,8 +497,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The history saving thread hit an unexpected error (OperationalError('database or disk is full',)).History will not be written to the database.\n",
-      "Sam Jul 13 01:28:07 CEST 2019\n",
+      "Tue Jul 23 22:05:29 UTC 2019\n",
       "\n"
      ]
     }
@@ -412,6 +505,38 @@
    "source": [
     "myCmd = os.popen('date').read()\n",
     "print(myCmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Download dataset\n",
+    "\n",
+    "**Note**: Download this dataset only once. If you have run it before, please go to  **2. Run Analysis** part directly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "command32 = 'wget -c http://opendata.atlas.cern/release/samples/MC.zip'\n",
+    "os.system(command32)"
    ]
   },
   {
@@ -423,53 +548,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2304"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "command4 = 'unzip complete_set_of_ATLAS_open_data_samples_July_2016.zip'\n",
+    "command4 = 'unzip MC.zip'\n",
     "os.system(command4)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Print current system time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sam Jul 13 01:28:07 CEST 2019\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "myCmd = os.popen('date').read()\n",
-    "print(myCmd)"
    ]
   },
   {
@@ -481,24 +567,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "command5 = 'rm -rf complete_set_of_ATLAS_open_data_samples_July_2016.zip'\n",
+    "command5 = 'rm -rf MC.zip'\n",
     "os.system(command5)"
    ]
   },
@@ -511,20 +586,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sam Jul 13 01:28:08 CEST 2019\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "myCmd = os.popen('date').read()\n",
     "print(myCmd)"
@@ -539,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -557,20 +623,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/student/demos-framework-software-notebooks/python-8tev/python-8tev/atlas-outreach-data-tools-framework\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "myCmd = os.popen('pwd').read()\n",
     "print(myCmd)"
@@ -585,20 +642,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sam Jul 13 01:28:08 CEST 2019\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "myCmd = os.popen('date').read()\n",
     "print(myCmd)"
@@ -620,22 +668,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "256"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "command6 = 'python RunScript.py -a TTbarAnalysis'\n",
     "os.system(command6)"
@@ -650,20 +687,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sam Jul 13 01:28:10 CEST 2019\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "myCmd = os.popen('date').read()\n",
     "print(myCmd)"
@@ -685,22 +713,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "256"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# plot results\n",
     "command7 = 'python PlotResults.py Configurations/PlotConf_TTbarAnalysis.py' \n",
@@ -716,20 +733,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sam Jul 13 01:28:11 CEST 2019\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "myCmd = os.popen('date').read()\n",
     "print(myCmd)"
@@ -744,22 +752,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "command8 = 'ls -lhrt Output/'\n",
     "os.system(command8)"
@@ -774,42 +771,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/student/demos-framework-software-notebooks/python-8tev/python-8tev/atlas-outreach-data-tools-framework\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "myCmd = os.popen('pwd').read()\n",
     "print(myCmd)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -829,7 +799,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
