--- a/get-running-8-tev-code-python.ipynb
+++ b/get-running-8-tev-code-python.ipynb
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -548,11 +548,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "command4 = 'unzip MC.zip'\n",
     "os.system(command4)"
@@ -567,11 +578,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "command5 = 'rm -rf MC.zip'\n",
     "os.system(command5)"
@@ -586,11 +608,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tue Jul 23 22:13:59 UTC 2019\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "myCmd = os.popen('date').read()\n",
     "print(myCmd)"
@@ -605,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -623,11 +654,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/main/notebooks/demos-framework-software-notebooks/python-8tev/atlas-outreach-data-tools-framework\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "myCmd = os.popen('pwd').read()\n",
     "print(myCmd)"
@@ -642,11 +682,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tue Jul 23 22:13:59 UTC 2019\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "myCmd = os.popen('date').read()\n",
     "print(myCmd)"
@@ -668,13 +717,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "256"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "command6 = 'python RunScript.py -a TTbarAnalysis'\n",
+    "command6 = 'python2 RunScript.py -a TTbarAnalysis'\n",
     "os.system(command6)"
    ]
   },
@@ -687,11 +747,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tue Jul 23 22:13:59 UTC 2019\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "myCmd = os.popen('date').read()\n",
     "print(myCmd)"
@@ -720,7 +789,7 @@
    "outputs": [],
    "source": [
     "# plot results\n",
-    "command7 = 'python PlotResults.py Configurations/PlotConf_TTbarAnalysis.py' \n",
+    "command7 = 'python2 PlotResults.py Configurations/PlotConf_TTbarAnalysis.py' \n",
     "os.system(command7)"
    ]
   },
