--- a/get-running-8-tev-code-python.ipynb
+++ b/get-running-8-tev-code-python.ipynb
@@ -56,7 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tue Jul 23 22:03:05 UTC 2019\n",
+      "Tue Jul 23 22:22:41 UTC 2019\n",
       "\n"
      ]
     }
@@ -90,7 +90,7 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "256"
       ]
      },
      "execution_count": 3,
@@ -127,8 +127,8 @@
       "-rw-r--r-- 1 main main 8.0K Jul 23 21:46 get-running-13-tev-python-code.ipynb\n",
       "-rw-r--r-- 1 main main  64K Jul 23 21:46 get-running-13-tev-cpp-code.ipynb\n",
       "drwxr-xr-x 2 main main 4.0K Jul 23 21:46 images\n",
-      "-rw-r--r-- 1 main main  12K Jul 23 22:02 get-running-8-tev-code-python.ipynb\n",
-      "drwxr-xr-x 2 main main 4.0K Jul 23 22:03 python-8tev\n",
+      "drwxr-xr-x 3 main main 4.0K Jul 23 22:03 python-8tev\n",
+      "-rw-r--r-- 1 main main  12K Jul 23 22:22 get-running-8-tev-code-python.ipynb\n",
       "\n"
      ]
     }
@@ -237,7 +237,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tue Jul 23 22:03:07 UTC 2019\n",
+      "Tue Jul 23 22:22:59 UTC 2019\n",
       "\n"
      ]
     }
@@ -256,22 +256,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "command2 = 'git clone https://github.com/atlas-outreach-data-tools/atlas-outreach-data-tools-framework.git'\n",
     "os.system(command2)"
@@ -293,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -311,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -331,15 +320,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Print current system time"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -349,7 +331,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tue Jul 23 22:03:12 UTC 2019\n",
+      "Tue Jul 23 22:23:29 UTC 2019\n",
       "\n"
      ]
     }
@@ -369,23 +351,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Print current system time"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "command31 = 'wget -c http://opendata.atlas.cern/release/samples/Data.zip'\n",
     "os.system(command31)"
@@ -400,20 +378,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tue Jul 23 22:04:41 UTC 2019\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "myCmd = os.popen('date').read()\n",
     "print(myCmd)"
@@ -428,22 +397,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "command4 = 'unzip Data.zip'\n",
     "os.system(command4)"
@@ -458,22 +416,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "command5 = 'rm -rf Data.zip'\n",
     "os.system(command5)"
@@ -488,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -497,7 +444,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tue Jul 23 22:05:29 UTC 2019\n",
+      "Tue Jul 23 22:23:36 UTC 2019\n",
       "\n"
      ]
     }
@@ -518,22 +465,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "command32 = 'wget -c http://opendata.atlas.cern/release/samples/MC.zip'\n",
     "os.system(command32)"
@@ -548,22 +484,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "command4 = 'unzip MC.zip'\n",
     "os.system(command4)"
@@ -578,22 +503,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "command5 = 'rm -rf MC.zip'\n",
     "os.system(command5)"
@@ -608,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -617,7 +531,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tue Jul 23 22:13:59 UTC 2019\n",
+      "Tue Jul 23 22:23:40 UTC 2019\n",
       "\n"
      ]
     }
@@ -636,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -654,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -682,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -691,7 +605,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tue Jul 23 22:13:59 UTC 2019\n",
+      "Tue Jul 23 22:23:47 UTC 2019\n",
       "\n"
      ]
     }
@@ -717,22 +631,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "256"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "command6 = 'python2 RunScript.py -a TTbarAnalysis'\n",
     "os.system(command6)"
@@ -747,20 +650,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tue Jul 23 22:13:59 UTC 2019\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "myCmd = os.popen('date').read()\n",
     "print(myCmd)"
@@ -848,6 +742,13 @@
    "source": [
     "myCmd = os.popen('pwd').read()\n",
     "print(myCmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![logo](images/opendata-top-transblack.png)"
    ]
   }
  ],
