Making visible the final plots + another updates in the 8 TeV and 13 TeV

--- a/get-running-13-tev-python-code.ipynb
+++ b/get-running-13-tev-python-code.ipynb
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fre Jul 19 13:51:00 CEST 2019\n",
+      "Fre Jul 26 20:42:47 CEST 2019\n",
       "\n"
      ]
     }
@@ -67,11 +67,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 40K\n",
-      "-rw-r--r-- 1 summerstudent users  12K Jul 10 12:19 get-running-8-tev-code.ipynb\n",
-      "-rw-r--r-- 1 summerstudent users  11K Jul 10 12:24 get-running-8-tev-code-to-git-repo.ipynb\n",
-      "-rw-r--r-- 1 summerstudent users 9.5K Jul 11 15:59 get-running-13-tev-cpp-code.ipynb\n",
-      "drwxr-xr-x 2 summerstudent users 4.0K Jul 19 13:51 cpp-13tev\n",
+      "total 116K\n",
+      "-rw-r--r-- 1 summerstudent users  125 Jul 26 20:39 README.md\n",
+      "drwxr-xr-x 2 summerstudent users 4.0K Jul 26 20:39 images\n",
+      "-rw-r--r-- 1 summerstudent users 9.6K Jul 26 20:39 get-running-8-tev-code-cpp.ipynb\n",
+      "-rw-r--r-- 1 summerstudent users 8.0K Jul 26 20:39 get-running-13-tev-python-code.ipynb\n",
+      "-rw-r--r-- 1 summerstudent users  64K Jul 26 20:39 get-running-13-tev-cpp-code.ipynb\n",
+      "drwxr-xr-x 3 summerstudent users 4.0K Jul 26 20:40 python-8tev\n",
+      "-rw-r--r-- 1 summerstudent users  15K Jul 26 20:42 get-running-8-tev-code-python.ipynb\n",
+      "drwxr-xr-x 2 summerstudent users 4.0K Jul 26 20:42 cpp-13tev\n",
       "\n"
      ]
     }
@@ -92,7 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/student/notebooks/tmp-notebooks\n",
+      "/home/student/notebooks/demos-framework-software-notebooks\n",
       "\n"
      ]
     }
@@ -125,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/student/notebooks/tmp-notebooks/cpp-13tev\n",
+      "/home/student/notebooks/demos-framework-software-notebooks/cpp-13tev\n",
       "\n"
      ]
     }
@@ -146,7 +150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fre Jul 19 13:51:15 CEST 2019\n",
+      "Fre Jul 26 20:42:48 CEST 2019\n",
       "\n"
      ]
     }
@@ -203,7 +207,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/student/notebooks/tmp-notebooks/cpp-13tev/atlas-outreach-cpp-framework-13tev\n",
+      "/home/student/notebooks/demos-framework-software-notebooks/cpp-13tev/atlas-outreach-cpp-framework-13tev\n",
       "\n"
      ]
     }
@@ -224,7 +228,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fre Jul 19 13:51:24 CEST 2019\n",
+      "Fre Jul 26 20:42:50 CEST 2019\n",
       "\n"
      ]
     }
@@ -236,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -247,7 +251,7 @@
        "0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -269,7 +273,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fre Jul 19 13:53:46 CEST 2019\n",
+      "Fre Jul 26 20:46:02 CEST 2019\n",
       "\n"
      ]
     }
@@ -281,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -292,7 +296,7 @@
        "0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -314,7 +318,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fre Jul 19 13:54:46 CEST 2019\n",
+      "Fre Jul 26 20:47:29 CEST 2019\n",
       "\n"
      ]
     }
@@ -326,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -337,7 +341,7 @@
        "0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -359,7 +363,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fre Jul 19 13:54:46 CEST 2019\n",
+      "Fre Jul 26 20:47:29 CEST 2019\n",
       "\n"
      ]
     }
@@ -371,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -379,6 +383,27 @@
    "source": [
     "##\n",
     "os.chdir(\"../atlas-outreach-cpp-framework-13tev\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/student/notebooks/demos-framework-software-notebooks/cpp-13tev/atlas-outreach-cpp-framework-13tev\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "myCmd = os.popen('pwd').read()\n",
+    "print(myCmd)"
    ]
   },
   {
@@ -392,46 +417,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/student/notebooks/tmp-notebooks/cpp-13tev\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "myCmd = os.popen('pwd').read()\n",
-    "print(myCmd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fre Jul 19 14:05:26 CEST 2019\n",
+      "Fre Jul 26 20:47:29 CEST 2019\n",
       "\n"
      ]
     }
    ],
    "source": [
     "myCmd = os.popen('date').read()\n",
-    "print(myCmd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "myCmd = os.popen('pwd').read()\n",
     "print(myCmd)"
    ]
   }
