--- a/get-running-8-tev-code-python.ipynb
+++ b/get-running-8-tev-code-python.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![logo](images/opendata-top-transblack.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Get Running the 8 TeV Example in Python\n",
     "\n",
     "\n",
@@ -56,7 +63,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tue Jul 23 22:22:41 UTC 2019\n",
+      "Fre Jul 26 20:40:28 CEST 2019\n",
       "\n"
      ]
     }
@@ -90,7 +97,7 @@
     {
      "data": {
       "text/plain": [
-       "256"
+       "0"
       ]
      },
      "execution_count": 3,
@@ -121,14 +128,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 108K\n",
-      "-rw-r--r-- 1 main main  125 Jul 23 21:46 README.md\n",
-      "-rw-r--r-- 1 main main 9.6K Jul 23 21:46 get-running-8-tev-code-cpp.ipynb\n",
-      "-rw-r--r-- 1 main main 8.0K Jul 23 21:46 get-running-13-tev-python-code.ipynb\n",
-      "-rw-r--r-- 1 main main  64K Jul 23 21:46 get-running-13-tev-cpp-code.ipynb\n",
-      "drwxr-xr-x 2 main main 4.0K Jul 23 21:46 images\n",
-      "drwxr-xr-x 3 main main 4.0K Jul 23 22:03 python-8tev\n",
-      "-rw-r--r-- 1 main main  12K Jul 23 22:22 get-running-8-tev-code-python.ipynb\n",
+      "total 112K\n",
+      "-rw-r--r-- 1 summerstudent users  125 Jul 26 20:39 README.md\n",
+      "drwxr-xr-x 2 summerstudent users 4.0K Jul 26 20:39 images\n",
+      "-rw-r--r-- 1 summerstudent users  14K Jul 26 20:39 get-running-8-tev-code-python.ipynb\n",
+      "-rw-r--r-- 1 summerstudent users 9.6K Jul 26 20:39 get-running-8-tev-code-cpp.ipynb\n",
+      "-rw-r--r-- 1 summerstudent users 8.0K Jul 26 20:39 get-running-13-tev-python-code.ipynb\n",
+      "-rw-r--r-- 1 summerstudent users  64K Jul 26 20:39 get-running-13-tev-cpp-code.ipynb\n",
+      "drwxr-xr-x 2 summerstudent users 4.0K Jul 26 20:40 python-8tev\n",
       "\n"
      ]
     }
@@ -156,7 +163,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/main/notebooks/demos-framework-software-notebooks\n",
+      "/home/student/notebooks/demos-framework-software-notebooks\n",
       "\n"
      ]
     }
@@ -209,7 +216,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/main/notebooks/demos-framework-software-notebooks/python-8tev\n",
+      "/home/student/notebooks/demos-framework-software-notebooks/python-8tev\n",
       "\n"
      ]
     }
@@ -237,7 +244,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tue Jul 23 22:22:59 UTC 2019\n",
+      "Fre Jul 26 20:40:28 CEST 2019\n",
       "\n"
      ]
     }
@@ -256,11 +263,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "command2 = 'git clone https://github.com/atlas-outreach-data-tools/atlas-outreach-data-tools-framework.git'\n",
     "os.system(command2)"
@@ -282,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -300,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -309,7 +327,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/main/notebooks/demos-framework-software-notebooks/python-8tev/atlas-outreach-data-tools-framework/Input\n",
+      "/home/student/notebooks/demos-framework-software-notebooks/python-8tev/atlas-outreach-data-tools-framework/Input\n",
       "\n"
      ]
     }
@@ -321,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -331,7 +349,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tue Jul 23 22:23:29 UTC 2019\n",
+      "Fre Jul 26 20:40:29 CEST 2019\n",
       "\n"
      ]
     }
@@ -348,169 +366,6 @@
     "- Download dataset\n",
     "\n",
     "**Note**: Download this dataset only once. If you have run it before, please go to  **2. Run Analysis** part directly."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Print current system time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "command31 = 'wget -c http://opendata.atlas.cern/release/samples/Data.zip'\n",
-    "os.system(command31)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Print current system time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "myCmd = os.popen('date').read()\n",
-    "print(myCmd)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Unzip the dataset you download"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "command4 = 'unzip Data.zip'\n",
-    "os.system(command4)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Remove the zip file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "command5 = 'rm -rf Data.zip'\n",
-    "os.system(command5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Print current system time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tue Jul 23 22:23:36 UTC 2019\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "myCmd = os.popen('date').read()\n",
-    "print(myCmd)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Download dataset\n",
-    "\n",
-    "**Note**: Download this dataset only once. If you have run it before, please go to  **2. Run Analysis** part directly."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "command32 = 'wget -c http://opendata.atlas.cern/release/samples/MC.zip'\n",
-    "os.system(command32)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Unzip the dataset you download"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "command4 = 'unzip MC.zip'\n",
-    "os.system(command4)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Remove the zip file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "command5 = 'rm -rf MC.zip'\n",
-    "os.system(command5)"
    ]
   },
   {
@@ -528,10 +383,248 @@
    },
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "command31 = 'wget -c http://opendata.atlas.cern/release/samples/Data.zip'\n",
+    "os.system(command31)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Print current system time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tue Jul 23 22:23:40 UTC 2019\n",
+      "Fre Jul 26 20:41:15 CEST 2019\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "myCmd = os.popen('date').read()\n",
+    "print(myCmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Unzip the dataset you download"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "command4 = 'unzip Data.zip'\n",
+    "os.system(command4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Remove the zip file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "command5 = 'rm -rf Data.zip'\n",
+    "os.system(command5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Print current system time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fre Jul 26 20:41:35 CEST 2019\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "myCmd = os.popen('date').read()\n",
+    "print(myCmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Download dataset\n",
+    "\n",
+    "**Note**: Download this dataset only once. If you have run it before, please go to  **2. Run Analysis** part directly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "command32 = 'wget -c http://opendata.atlas.cern/release/samples/MC.zip'\n",
+    "os.system(command32)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Unzip the dataset you download"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "command4 = 'unzip MC.zip'\n",
+    "os.system(command4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Remove the zip file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "command5 = 'rm -rf MC.zip'\n",
+    "os.system(command5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Print current system time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fre Jul 26 20:47:59 CEST 2019\n",
       "\n"
      ]
     }
@@ -550,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -568,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -577,7 +670,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/main/notebooks/demos-framework-software-notebooks/python-8tev/atlas-outreach-data-tools-framework\n",
+      "/home/student/notebooks/demos-framework-software-notebooks/python-8tev/atlas-outreach-data-tools-framework\n",
       "\n"
      ]
     }
@@ -596,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -605,7 +698,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tue Jul 23 22:23:47 UTC 2019\n",
+      "Fre Jul 26 20:47:59 CEST 2019\n",
       "\n"
      ]
     }
@@ -631,11 +724,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "command6 = 'python2 RunScript.py -a TTbarAnalysis'\n",
     "os.system(command6)"
@@ -650,11 +754,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fre Jul 26 21:14:10 CEST 2019\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "myCmd = os.popen('date').read()\n",
     "print(myCmd)"
@@ -676,11 +789,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# plot results\n",
     "command7 = 'python2 PlotResults.py Configurations/PlotConf_TTbarAnalysis.py' \n",
@@ -696,11 +820,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fre Jul 26 21:14:14 CEST 2019\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "myCmd = os.popen('date').read()\n",
     "print(myCmd)"
@@ -715,11 +848,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "command8 = 'ls -lhrt Output/'\n",
     "os.system(command8)"
@@ -734,11 +878,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/student/notebooks/demos-framework-software-notebooks/python-8tev/atlas-outreach-data-tools-framework\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "myCmd = os.popen('pwd').read()\n",
     "print(myCmd)"
@@ -748,7 +901,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![logo](images/opendata-top-transblack.png)"
+    "![etmiss](python-8tev/atlas-outreach-data-tools-framework/Output/etmiss.png)\n",
+    "![](python-8tev/atlas-outreach-data-tools-framework/Output/jet_eta.png)  \n",
+    "![](python-8tev/atlas-outreach-data-tools-framework/Output/jet_jvf.png)\n",
+    "![](python-8tev/atlas-outreach-data-tools-framework/Output/jet_m.png)                                                              \n",
+    "![](python-8tev/atlas-outreach-data-tools-framework/Output/jet_MV1.png)\n",
+    "![](python-8tev/atlas-outreach-data-tools-framework/Output/jet_pt.png)\n",
+    "![](python-8tev/atlas-outreach-data-tools-framework/Output/lep_charge.png)\n",
+    "![](python-8tev/atlas-outreach-data-tools-framework/Output/lep_d0.png)\n",
+    "![](python-8tev/atlas-outreach-data-tools-framework/Output/lep_E.png)              \n",
+    "![](python-8tev/atlas-outreach-data-tools-framework/Output/lep_eta.png)\n",
+    "![](python-8tev/atlas-outreach-data-tools-framework/Output/lep_n.png)\n",
+    "![](python-8tev/atlas-outreach-data-tools-framework/Output/lep_phi.png)\n",
+    "![](python-8tev/atlas-outreach-data-tools-framework/Output/lep_pt.png)\n",
+    "![](python-8tev/atlas-outreach-data-tools-framework/Output/n_jets.png)\n",
+    "![](python-8tev/atlas-outreach-data-tools-framework/Output/WtMass.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Done!"
    ]
   }
  ],
@@ -769,7 +943,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
