comment download part

--- a/get-running-13-tev-python-code.ipynb
+++ b/get-running-13-tev-python-code.ipynb
@@ -310,8 +310,8 @@
    "outputs": [],
    "source": [
     "##\n",
-    "command3 = 'wget -c http://opendata.atlas.cern/release/samples/2019/GamGam/ATLAS-open-data-13TeV-2019-GamGam.zip'\n",
-    "os.system(command3)"
+    "#command3 = 'wget -c http://opendata.atlas.cern/release/samples/2019/GamGam/ATLAS-open-data-13TeV-2019-GamGam.zip'\n",
+    "#os.system(command3)"
    ]
   },
   {
@@ -322,33 +322,8 @@
    },
    "outputs": [],
    "source": [
-    "myCmd = os.popen('date').read()\n",
-    "print(myCmd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "##\n",
-    "command4 = 'unzip ATLAS-open-data-13TeV-2019-GamGam.zip'\n",
-    "os.system(command4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "myCmd = os.popen('date').read()\n",
-    "print(myCmd)"
+    "#myCmd = os.popen('date').read()\n",
+    "#print(myCmd)"
    ]
   },
   {
@@ -360,8 +335,8 @@
    "outputs": [],
    "source": [
     "##\n",
-    "command5 = 'rm -rf ATLAS-open-data-13TeV-2019-GamGam.zip'\n",
-    "os.system(command5)"
+    "#command4 = 'unzip ATLAS-open-data-13TeV-2019-GamGam.zip'\n",
+    "#os.system(command4)"
    ]
   },
   {
@@ -372,8 +347,33 @@
    },
    "outputs": [],
    "source": [
-    "myCmd = os.popen('date').read()\n",
-    "print(myCmd)"
+    "#myCmd = os.popen('date').read()\n",
+    "#print(myCmd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "##\n",
+    "#command5 = 'rm -rf ATLAS-open-data-13TeV-2019-GamGam.zip'\n",
+    "#os.system(command5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#myCmd = os.popen('date').read()\n",
+    "#print(myCmd)"
    ]
   },
   {
